@@ -48,3 +48,5 @@ are passed into the model wrapper via |anchor_mode| options are Sum, All, Final 
 - Adds support for torch.rand
 
 - Adds support for torch.clamp
+
+- Adds poptorch.DataLoader
